# tanvivarangal

./: README.md  pyproject.toml
.github/workflows/: சோதனைகள்.yml
src/: __init__.py
src/சுய/: வடிவம்.py
src/சுய/உருப்படி/: உரை.py  எண்.py  நிறுத்தற்குறிகள்.py  பெயர்.py
src/சுய/உருப்படி/வெளியீடுகள்/: மாநாடு_கட்டுரை.py  வெளியீடுகள்.py
src/தன்விவரங்கள்/: __init__.py  சுயவிவரங்கள்.py  தன்விவரங்கள்.py  வடிவம்.py
src/தன்விவரங்கள்/உருப்படி/: இணைப்பு.py  உருப்படி.py  உரை.py  எண்.py  கருவிகள்.py  தலைப்பு.py  தேதி.py  தொடர்புகள்.py  நிறுத்தற்குறிகள்.py  பத்தி.py  பெயர்.py  மொழி_உரை.py  மொழிகள்.py
src/தன்விவரங்கள்/உருப்படி/வெளியீடுகள்/: கட்டுரை.py  கருவிகள்.py  நூல்.py  நூல்_அத்தியாயம்.py  மாநாடு_கட்டுரை.py  வெளியீடு.py  வெளியீடுகள்.py
src/தன்விவரங்கள்/மொழிபெயர்ப்பாளர்/: தகவல்கள்.py  மொழிபெயர்ப்பாளர்.py
tests/: test_வெளியீடு.py
tests/உருப்படிகள்/: test_உரை.py  test_தலைப்பு.py
