[project]
name = "tanvivaragal"
version = "0.1.0"
description = ""
authors = [
    { name = "Julien Malard-Adam", email = "julien.malard@mail.mcgill.ca" },
]
dependencies = [
    "bibtexparser<2.0.0,>=1.4.0",
    "ennikkai<2.0.0,>=1.2.5",
    "nuchabal<1.0.0,>=0.0.1",
    "pyfranc<1.0.0,>=0.1.1",
    "deepmerge<2.0.0,>=1.1.0",
    "odfdo>=3.9.1",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "AGPL-3.0" }


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pdm run pytest"
cov = "pdm run coverage run -m pytest"

[tool.pdm.build]
includes = ["src/தன்விவரங்கள்"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest<8.4.0,>=8.3.5",
    "coverage>=7.8.0",
]
